# dinofyi

./: README.md  demo.tape  pyproject.toml
src/dinofyi/: __init__.py  api.py  cli.py  mcp_server.py
tests/: test_basic.py
